# YeoHengServer

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/auth/: authentication.rs  check_user.rs  mod.rs
src/controllers/: event_controller.rs  mod.rs  trip_controller.rs  user_controller.rs
src/models/: event.rs  mod.rs  trip.rs  user.rs
src/tests/: event_test.rs  mod.rs  trip_test.rs  user_test.rs
src/utils/: custom_visitors.rs  external_services.rs  mod.rs
