[package]
name = "yeoheng-server"
version = "0.1.0"
authors = ["Victor Lopez <A01336434@itesm.mx", "Injoong Kim", "Fernando Rios"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
bson = "1.1.0"
serde = "1.0.115"
serde_json = "1.0.57"
dotenv = "0.15.0"
rust-argon2 = "0.8.2"
listenfd = "0.3.3"
env_logger = "0.7"
regex = "1"
jsonwebtoken = "7.2.0"
chrono = "0.4.15"
actix-cors = "0.3"

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["async-std-runtime"]